[project]
name = "aether-kernel"
version = "0.1.0"
description = "Aether-Kernel: High-throughput event-driven multi-agent orchestration runtime"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "aiohttp>=3.9",
    "docker>=7.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
]
